--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@
       </div>
       
       <button type="submit" class="submit-btn">Kirim Formulir</button>
+      <form id="registration-form" enctype="multipart/form-data">
+
     </form>
   </div>
 
