--- a/index.html
+++ b/index.html
@@ -339,13 +339,16 @@
       </div>
       
       <button type="submit" class="submit-btn">Kirim Formulir</button>
+
+      <form id="registration-form" enctype="multipart/form-data">
+
     </form>
   </div>
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script>
   // Konfigurasi
-  const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwcdOwBTiH3GgYQZyxDRUlpFIzAN14dpdKxwYD4B7frcy5rwRinjPVjUiOVGn1t-F-m-A/exec";
+  const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwod2xCnH2NatAaVXQU5N-0ufC9HVwWmU_2gSmmPDRf4BC74ZEi9T0FoYlVF4EjATAGCg/exec";
   
   // Inisialisasi peta
   let map, marker;
