--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
+<form id="registration-form" enctype="multipart/form-data">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -345,7 +347,7 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script>
   // Konfigurasi
-  const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzy5OH3ewb8OxjxGLDfC6NgM2FfvuAPPZe4GOd3TmSvwB9v3dPqXJBnWpUjR4AYp-3PNg/exec";
+  const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyoaQz_vBgu26vGIabxhrfUGLV9WSQhPUtoyorvIpT3d1L2UzE66qndufWYAOCGfcKj9w/exec";
   
   // Inisialisasi peta
   let map, marker;
