--- a/index.html
+++ b/index.html
@@ -9,6 +9,232 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     /* CSS sama seperti sebelumnya, aku tidak ubah */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      line-height: 1.6;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+    }
+
+    h1 {
+      text-align: center;
+      color: #d92323;
+      margin-bottom: 30px;
+      font-size: 2.2rem;
+    }
+
+    .form-section {
+      margin-bottom: 30px;
+      padding: 20px;
+      background-color: #f9f9f9;
+      border-radius: 8px;
+      border-left: 4px solid #d92323;
+    }
+
+    .form-section h2 {
+      color: #d92323;
+      margin-bottom: 15px;
+      font-size: 1.4rem;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: 500;
+      color: #555;
+    }
+
+    input[type="text"],
+    input[type="tel"],
+    input[type="email"],
+    input[type="number"],
+    textarea,
+    select {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    textarea {
+      min-height: 80px;
+      resize: vertical;
+    }
+
+    .file-upload {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      border: 2px dashed #ccc;
+      border-radius: 5px;
+      background-color: #f8f8f8;
+      text-align: center;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+
+    .file-upload:hover {
+      border-color: #d92323;
+      background-color: #fff8f8;
+    }
+
+    .file-upload i {
+      font-size: 40px;
+      color: #d92323;
+      margin-bottom: 10px;
+    }
+
+    .file-upload input {
+      display: none;
+    }
+
+    .preview-image {
+      max-width: 200px;
+      max-height: 200px;
+      margin-top: 15px;
+      border-radius: 5px;
+      display: none;
+    }
+
+    #menu-items {
+      margin-top: 20px;
+    }
+
+    .menu-item {
+      background-color: white;
+      padding: 15px;
+      border-radius: 5px;
+      border: 1px solid #eee;
+      margin-bottom: 15px;
+      position: relative;
+    }
+
+    .menu-item-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .remove-menu {
+      background-color: #ff4d4d;
+      color: white;
+      border: none;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+    }
+
+    .menu-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 15px;
+    }
+
+    .add-btn {
+      background-color: #d92323;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 10px auto;
+      transition: background-color 0.3s;
+    }
+
+    .add-btn:hover {
+      background-color: #a31c1c;
+    }
+
+    .add-btn i {
+      margin-right: 5px;
+    }
+
+    #map-container {
+      height: 300px;
+      z-index: 1;
+      width: 100%;
+      margin: 15px 0;
+      border-radius: 8px;
+      border: 1px solid #ddd;
+    }
+
+    .submit-btn {
+      background-color: #25D366;
+      color: white;
+      border: none;
+      padding: 12px 25px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 1.1rem;
+      display: block;
+      margin: 30px auto 0;
+      width: 100%;
+      max-width: 300px;
+      transition: all 0.3s;
+    }
+
+    .submit-btn:hover {
+      background-color: #128C7E;
+      transform: translateY(-2px);
+    }
+
+    .example-text {
+      font-size: 0.85rem;
+      color: #777;
+      margin-top: 5px;
+      font-style: italic;
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        padding: 15px;
+      }
+      
+      h1 {
+        font-size: 1.8rem;
+      }
+      
+      .form-section {
+        padding: 15px;
+      }
+
+      .leaflet-container {
+        background-color: #f8f8f8;
+      }
+    }
   </style>
 </head>
 <body>
